# Multi-File-Word-Counter

./: .editorconfig  .gitignore  CMakeLists.txt  LICENCE  NOTICE  README.md
docs/: CMakeLists.txt  Doxyfile.in
include/project/: main.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/project-benchmark/: CMakeLists.txt  project-bench.cpp
tests/project-unit/: CMakeLists.txt
